--- a/internal/common/config/global.yaml
+++ b/internal/common/config/global.yaml
@@ -1,4 +1,13 @@
+fallback-grpc-addr: 127.0.0.1:3030
+
 order:
   service_name: order
   server_to_run: http
   http-addr: 127.0.0.1:8282
+  grpc-addr: 127.0.0.1:5002
+
+stock:
+  service_name: stock
+  server_to_run: grpc
+  http-addr: 127.0.0.1:8283
+  grpc-addr: 127.0.0.1:5003
