引入了Lint包，并且实现了payment,order，stock服务三者之间的等待逻辑

--- a/internal/common/config/global.yaml
+++ b/internal/common/config/global.yaml
@@ -33,3 +33,5 @@ stripe-key: "STRIPE_KEY"
 
 # Linux 下 endpoint_stripe_secret: "${ENDPOINT_STRIPE_SECRET}"
 endpoint.stripe_secret: "ENDPOINT_STRIPE_SECRET"
+
+dial-grpc-timeout: 10
