使用opentelemetry jaeger 完成了同步路径的追踪

--- a/internal/common/config/global.yaml
+++ b/internal/common/config/global.yaml
@@ -1,5 +1,9 @@
 fallback-grpc-addr: 127.0.0.1:3030
 
+jaeger:
+  url: "http://192.168.244.129:14268/api/traces"
+
+
 order:
   service_name: order
   server_to_run: http
