--- a/internal/common/config/global.yaml
+++ b/internal/common/config/global.yaml
@@ -1,7 +1,7 @@
 fallback-grpc-addr: 127.0.0.1:3030
 
 jaeger:
-  url: "http://192.168.244.129:14268/api/traces"
+  url: "http://192.168.1.8:14268/api/traces"
 
 
 order:
@@ -23,13 +23,23 @@ payment:
   grpc-addr: 127.0.0.1:5004
 
 consul:
-  addr: 192.168.244.129:8500
+  addr: 192.168.1.8:8500
 
 rabbitmq:
   user: guest
   password: guest
-  host: 192.168.244.129
+  host: 192.168.1.8
   port: 5672
+  max-retry: 3
+
+mongo:
+  user: root
+  password: password
+  host: 192.168.1.8
+  port: 27017
+  db-name: "order"
+  coll-name: "order"
+
 
 # Linux 下的stripe-key: "${STRIPE_KEY}"
 # Windows 下的
@@ -39,5 +49,3 @@ stripe-key: "STRIPE_KEY"
 endpoint.stripe_secret: "ENDPOINT_STRIPE_SECRET"
 
 dial-grpc-timeout: 10
-
-rabbitmq.max-retry: 3
