--- a/internal/common/config/global.yaml
+++ b/internal/common/config/global.yaml
@@ -1,7 +1,7 @@
 fallback-grpc-addr: 127.0.0.1:3030
 
 jaeger:
-  url: "http://192.168.43.128:14268/api/traces"
+  url: "http://127.0.0.1:14268/api/traces"
 
 
 order:
@@ -23,22 +23,29 @@ payment:
   grpc-addr: 127.0.0.1:5004
 
 consul:
-  addr: 192.168.43.128:8500
+  addr: 127.0.0.1:8500
 
 rabbitmq:
   user: guest
   password: guest
-  host: 192.168.43.128
+  host: 127.0.0.1
   port: 5672
   max-retry: 3
 
 mongo:
   user: root
   password: password
-  host: 192.168.43.128
+  host: 127.0.0.1
   port: 27017
   db-name: "order"
   coll-name: "order"
+
+mysql:
+  user: root
+  password: root
+  host: localhost
+  port: 3307
+  dbname: "gorder"
 
 
 # Linux 下的stripe-key: "${STRIPE_KEY}"
