--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,6 +57,14 @@ services:
     ports:
       - "9090:9090"
 
+  redis:
+    image: redis:latest
+    restart: on-failure
+    ports:
+      - "6379:6379"
+    volumes:
+      - ./data/redis_data:/data
+      - ./redis.conf:/usr/local/etc/redis/redis.conf
 
   grafana:
     image: grafana/grafana
@@ -73,6 +81,6 @@ services:
       - MYSQL_PASSWORD=password
     volumes:
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
-      - ./mysql_data:/var/lib/mysql
+      - ./data/mysql_data:/var/lib/mysql
     ports:
       - "3307:3306"
