--- a/internal/common/config/global.yaml
+++ b/internal/common/config/global.yaml
@@ -22,6 +22,9 @@ payment:
   http-addr: 127.0.0.1:8284
   grpc-addr: 127.0.0.1:5004
 
+kitchen:
+  service-name: kitchen
+
 consul:
   addr: 127.0.0.1:8500
 
