--- a/internal/common/config/global.yaml
+++ b/internal/common/config/global.yaml
@@ -9,18 +9,22 @@ order:
   server_to_run: http
   http-addr: 127.0.0.1:8282
   grpc-addr: 127.0.0.1:5002
+  metrics_export_addr: 127.0.0.1:9123
 
 stock:
   service_name: stock
   server_to_run: grpc
   http-addr: 127.0.0.1:8283
   grpc-addr: 127.0.0.1:5003
+  metrics_export_addr: 127.0.0.1:9124
 
 payment:
   service_name: payment
   server_to_run: http
   http-addr: 127.0.0.1:8284
   grpc-addr: 127.0.0.1:5004
+  metrics_export_addr: 127.0.0.1:9125
+
 
 kitchen:
   service-name: kitchen
